package ar.edu.unam.veterinaria.exception;

public class CupoLLeno extends Exception {
    public CupoLLeno(String message) {
        super(message);
    }
}