@startuml Diagrama_Veterinaria


skinparam classAttributeIconSize 0

package ar.edu.unam.veterinaria.model {
    
    abstract class Persona <<MappedSuperclass>> {
        - id : Long
        - nombre : String
        - apellido : String
        - telefono : String
        - email : String
        - activo : boolean
    }

    class Cliente {
        - mascotas : List<Mascota>
    }

    class Veterinario {
        - matricula : String
        - especialidades : List<Especialidad>
        - diasDisponibles : List<String>
    }

    class Mascota {
        - id : Long
        - nombreMascota : String
        - especie : String
        - raza : String
        - fechaNacimiento : LocalDate
        - numeroFicha : Long
        - dueno : Cliente
        - historialTurnos : List<Turno>
    }

    class Especialidad {
        - id : Long
        - nombreEspecialidad : String
        - descripcion : String
    }

    class Turno {
        - id : Long
        - fecha : LocalDate
        - hora : LocalTime
        - estado : EstadoTurno
        - mascota : Mascota
        - veterinario : Veterinario
        - cliente : Cliente
        - servicios : List<Servicio>
    }

    enum EstadoTurno {
        PENDIENTE
        CONFIRMADO
        ATENDIDO
        CANCELADO
    }

    class TipoServicio {
        - id : Long
        - nombreDescriptivo : String
        - precioBase : Double
        - duracion : Double
        - limiteCupoDiario : Integer
    }

    abstract class Servicio {
        - id : Long
        - turno : Turno
        - tipoServicio : TipoServicio
        - precioHistorico : Double
    }

    class Consulta {
        - motivoConsulta : String
        - diagnostico : String
        - tratamiento : String
    }

    class Guarderia {
        - jaulaAsignada : String
        - alimentacionEspecifica : String
        - requiereActividad : boolean
        - observaciones : String
        - fechaSalida : LocalDate
    }

    class Peluqueria {
        - tipoCorte : String
        - observaciones : String
    }

    class Vacunacion {
        - vacunaAplicada : Vacuna
    }

    class Vacuna {
        - id : Long
        - nombreComercial : String
        - enfermedad : String
        - periodicidad : Integer
    }

    ' Relaciones de Herencia
    Persona <|-- Cliente
    Persona <|-- Veterinario
    
    Servicio <|-- Consulta
    Servicio <|-- Guarderia
    Servicio <|-- Peluqueria
    Servicio <|-- Vacunacion

    ' Asociaciones
    Cliente "1" -- "0..*" Mascota : "tiene >"
    Mascota "1" -- "0..*" Turno : "registra historial en >"
    
    Turno "1" *-- "1..*" Servicio : "contiene >"
    Turno "1" -- "1" EstadoTurno : "estado actual"
    Turno "1" -- "1" Cliente : "solicitado por >"
    Turno "1" -- "1" Veterinario : "atendido por >"
    
    Veterinario "1..*" -- "0..*" Especialidad : "posee >"
    
    Servicio "1" -- "1" TipoServicio : "definido como >"
    
    Vacunacion "0..*" -- "1" Vacuna : "aplica >"
}

package ar.edu.unam.veterinaria.exception {
    class CancelacionFueradeTermino <<Exception>>
    class CupoLLeno <<Exception>>
    class EspecialidadExistente <<Exception>>
    class JaulaNoDisponible <<Exception>>
    class MascotaNoEncontrada <<Exception>>
    class TurnoSinServiciosException <<Exception>>
    class TurnoSolapado <<Exception>>
    class VacunaVigenteException <<Exception>>
    class VeterinarioNoDisponible <<Exception>>
}

' Relación de dependencia conceptual (opcional, para no cruzar tantas líneas, indicamos que los servicios usan estas excepciones)
ar.edu.unam.veterinaria.model ..> ar.edu.unam.veterinaria.exception : "Lanza >"

@enduml